[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main Menu/Main Menu Font.tres" type="Theme" id=1]
[ext_resource path="res://Main Menu/Main Menu Text Normal.tres" type="StyleBox" id=2]
[ext_resource path="res://Main Menu/Main Menu.gd" type="Script" id=3]
[ext_resource path="res://Main Menu/Main Menu Text Hover.tres" type="StyleBox" id=4]
[ext_resource path="res://Main Menu/Main Menu Text Focus.tres" type="StyleBox" id=5]
[ext_resource path="res://Rubik-VariableFont_wght.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 140
outline_size = 34
outline_color = Color( 0.905882, 0.870588, 0.729412, 1 )
use_filter = true
font_data = ExtResource( 6 )

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="StartNewGame" type="Button" parent="."]
margin_left = 200.0
margin_top = 300.0
margin_right = 800.0
margin_bottom = 400.0
theme = ExtResource( 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
text = "Start New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="."]
margin_left = 200.0
margin_top = 490.0
margin_right = 800.0
margin_bottom = 590.0
theme = ExtResource( 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
margin_left = 200.0
margin_top = 680.0
margin_right = 800.0
margin_bottom = 780.0
theme = ExtResource( 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Easy" type="Button" parent="."]
visible = false
margin_left = 900.0
margin_top = 400.0
margin_right = 1200.0
margin_bottom = 480.0
theme = ExtResource( 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
text = "Easy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Normal" type="Button" parent="."]
visible = false
margin_left = 900.0
margin_top = 500.0
margin_right = 1200.0
margin_bottom = 580.0
theme = ExtResource( 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
text = "Normal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hard" type="Button" parent="."]
visible = false
margin_left = 900.0
margin_top = 600.0
margin_right = 1200.0
margin_bottom = 680.0
theme = ExtResource( 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
text = "Hard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Runeguard" type="Label" parent="."]
margin_left = 150.0
margin_top = 50.0
margin_right = 892.0
margin_bottom = 248.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Runeguard"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="StartNewGame" to="." method="_on_StartNewGame_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Easy" to="." method="_on_Easy_pressed"]
[connection signal="pressed" from="Normal" to="." method="_on_Normal_pressed"]
[connection signal="pressed" from="Hard" to="." method="_on_Hard_pressed"]
